Align resource discovery with model center
