# server/handlers/resource_handler.go
@@ -4,22 +4,41 @@ import (
 	"net/http"
 
 	gcsclient "github.com/ReyRen/gcs-distill/internal/client/gcs"
+	"github.com/ReyRen/gcs-distill/service"
 	"github.com/gin-gonic/gin"
 )
 
 type ResourceHandler struct {
+	resources *service.ResourceService
 	gcsClient *gcsclient.Client
 }
 
-func NewResourceHandler(gcsClient *gcsclient.Client) *ResourceHandler {
-	return &ResourceHandler{gcsClient: gcsClient}
+func NewResourceHandler(resources *service.ResourceService, gcsClient *gcsclient.Client) *ResourceHandler {
+	return &ResourceHandler{resources: resources, gcsClient: gcsClient}
+}
+
+func (h *ResourceHandler) Available(c *gin.Context) {
+	out, err := h.resources.Available(c.Request.Context())
+	if err != nil {
+		c.JSON(http.StatusBadGateway, gin.H{
+			"code":    http.StatusBadGateway,
+			"message": err.Error(),
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"code":    http.StatusOK,
+		"message": "获取可用资源成功",
+		"data":    out,
+	})
 }
 
 func (h *ResourceHandler) ListNodes(c *gin.Context) {
 	nodes, err := h.gcsClient.ListNodes(c.Request.Context())
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"code":    http.StatusInternalServerError,
+		c.JSON(http.StatusBadGateway, gin.H{
+			"code":    http.StatusBadGateway,
 			"message": err.Error(),
 		})
 		return
@@ -44,8 +63,8 @@ func (h *ResourceHandler) GetNode(c *gin.Context) {
 
 	node, found, err := h.gcsClient.GetNode(c.Request.Context(), nodeName)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"code":    http.StatusInternalServerError,
+		c.JSON(http.StatusBadGateway, gin.H{
+			"code":    http.StatusBadGateway,
 			"message": err.Error(),
 		})
 		return
